# scpv2-sdk

./: .gitignore  MANIFEST.in  MCP.md  README.md  main.py  pyproject.toml
docs/: component.md  publishing.md  stub_guide.md
scpv2/: __init__.py  collection.py  container.py  credentials.py  ec2_client.pyi  exceptions.py  paginator.py  response.py  retries.py  s3_client.pyi  session.py  session.pyi  subnet_client.pyi  virtualserver_client.pyi  vpc_client.pyi  waiter.py
scpv2/resources/: __init__.py  loader.py
scpv2/resources/data/: ec2.json  keypair.json  s3.json  subnet.json  virtualserver.json  vpc.json
scpv2/stubs/: __init__.py  collection.pyi  ec2_client.pyi  ec2_resource.pyi  keypair_client.pyi  keypair_resource.pyi  paginator.pyi  retries.pyi  s3_client.pyi  session.pyi  subnet_client.pyi  subnet_resource.pyi  virtualserver_client.pyi  virtualserver_resource.pyi  vpc_client.pyi  vpc_resource.pyi  waiter.pyi
scripts/: generate_stubs.py
