[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scpv2-sdk"
version = "0.1.0"
description = "Samsung SDS SCP (Samsung Cloud Platform) v2 Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["scp", "samsung", "cloud", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scpv2*"]

[tool.setuptools.package-data]
"scpv2.resources" = ["data/*.json"]
"scpv2" = ["py.typed"]
